WebCore:

2009-04-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19644
        Text copied with Select All pastes with a indent but shouldn't
        <rdar://problem/6102483>
        Pasting the content of an HTML message in Mail causes addition nested <div> elements to be added

        To improve selectall/copy/paste fidelity of certain pages, we began wrapping copied content with
        a div that held properties and attributes from the fully selected body.  To fix the above issues,
        only do this if if the body has certain properties or attributes.  We'll begin adding to this list as
        necessary.  For now it's just background colors and images.  Tested copy/paste of nytimes, wired,
        arstechnica, and several others.

        Massive nesting can still happen, it will just be much less common.

        * editing/markup.cpp:
        (WebCore::createMarkup):

LayoutTests:

2009-04-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19644
        Text copied with Select All pastes with a indent but shouldn't
        <rdar://problem/6102483>
        Pasting the content of an HTML message in Mail causes addition nested <div> elements to be added

        * editing/pasteboard/19644-1-expected.txt: Added.
        * editing/pasteboard/19644-1.html: Added.
        * editing/pasteboard/19644-2-expected.txt: Added.
        * editing/pasteboard/19644-2.html: Added.
        * platform/mac/editing/inserting/insert-3907422-fix-expected.txt:
        * platform/mac/editing/pasteboard/paste-text-015-expected.checksum:
        * platform/mac/editing/pasteboard/paste-text-015-expected.png:
        * platform/mac/editing/pasteboard/paste-text-015-expected.txt:
        * platform/mac/editing/style/font-family-with-space-expected.txt:



Canonical link: https://commits.webkit.org/34774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42722 268f45cc-cd09-0410-ab3c-d52691b4dbfc